# mcp_tests

./: .gitignore  README.md
fitnet_mcp/: README.md  fitnet-helper.py  pyproject.toml  requirements.txt  temp_new_fitnet_helper.py
fitnet_mcp/tools/: main.py
my_first_mcp_server/: pyproject.toml
schema_enrichment/: README.md  main.py  pyproject.toml  requirements.txt  schema_enrichment.py
standardize_schema/: README.md  metadata_standardizer.py  modernized_standardizer.py  pyproject.toml  requirements.txt
standardize_schema/modules/: metadata.py  voozanoo.py
weather/: weather.py
